--- a/Django/mysite/gardyloo/templates/gardyloo/Home.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Home.html
@@ -9,163 +9,167 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <title>Home</title>
+    <style>
+        * {
+            font-family: 'Montserrat', sans-serif;
+            box-sizing: border-box;
+        }
 
+        .parent {
+            height: 18%;
+            width: 18%;
+            padding: 4px;
+            margin: 4px;
+        }
+
+        a {
+            color: lightslategrey;
+        }
+
+        .container {
+            display: block;
+            width: 100%;
+            height: auto;
+            position: relative;
+            padding: 12px
+        }
+
+        img {
+            display: block;
+            max-width: 100%;
+            max-height: 275px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+
+        .country-cards {
+            flex-wrap: wrap;
+            display: inline-flex;
+        }
+
+        .country__card {
+            margin: 2px;
+            box-shadow: 0 0 50px;
+            transition: 0.3s color;
+        }
+
+        .country__card:hover {
+            color: goldenrod;
+        }
+
+        .bottom {
+            position: absolute;
+            bottom: 4px;
+            width: 95%;
+
+        }
+
+        .card-content {
+            contain: size;
+        }
+
+        .kluge {
+            left: 0;
+            margin: 2px;
+            padding: 4px;
+        }
+
+        .nav-wrapper .input-field input[type=search] {
+            height: 70%;
+            width: 60%;
+            border: 0;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+        }
+
+        .search-wrapper {
+            height:35px !important;
+
+        }
+
+        .no-mar {
+        }
+
+    </style>
 </head>
-<style>
-    * {
-        font-family: 'Montserrat', sans-serif;
-        box-sizing: border-box;
-    }
-
-    .parent {
-        height: 18%;
-        width: 18%;
-        padding: 4px;
-        margin: 4px;
-    }
-
-    a{
-        color: lightslategrey;
-    }
-    .container {
-        display: block;
-        width: 100%;
-        height: auto;
-        position: relative;
-        padding: 12px
-    }
-
-    img {
-        display: block;
-        max-width: 100%;
-        max-height: 275px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-    }
-
-    .country-cards {
-        flex-wrap: wrap;
-        display: inline-flex;
-    }
-
-    .country__card {
-        margin:2px;
-        box-shadow: 0 0 50px;
-        transition: 0.3s color;
-    }
-
-    .country__card:hover {
-        color: goldenrod;
-    }
-
-    .bottom {
-        position: absolute;
-        bottom: 4px;
-        width: 95%;
-
-    }
-
-    .card-content {
-        contain: size;
-    }
-    .kluge {
-        left:0;
-        margin: 2px;
-        padding: 4px;
-    }
-    .nav-wrapper .input-field input[type=search] {
-    height: 70%;
-    width: 60%;
-    border: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-</style>
-<header>
-    <nav>
-        <div class="nav-wrapper container">
-            <ul>
-                <li>
-                    <div class="search-wrapper card input-field">
-                            <input class="center-align no-mar" type="search" placeholder="Search">
-                    </div>
-                </li>
-                <li class="valign-wrapper">
-                    <a href="{% url 'gardyloo:quiz' %}" class="btn waves-effect waves-light btn grey "><i
-                            class="material-icons left">contacts</i>Quiz</a>
-                </li>
-                <li class="valign-wrapper">
-                    <a href="{% url 'gardyloo:login' %}" class="btn waves-effect waves-light btn grey"><i
-                            class="material-icons left">grade</i>User Login</a>
-                </li>
-                <li class="valign-wrapper">
-                    <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i class="material-icons left">home</i>Home</a>
-                </li>
-            </ul>
-
-        </div>
-    </nav>
-</header>
 <body>
-
-<div class="container">
-    <div id="about">
-        <h4 class="center">How this all works</h4>
-        <!--<p class="flow-text">The information, in the card, contains all of the essential information to make you an-->
-            <!--informed traveler. There are several-->
-            <!--ways that you can interact with this website. Most simple, and somewhat a pre-requisite to the second-->
-            <!--option, is to-->
-            <!--go and study the cards by clicking the "Go To" link which will lead you to a detailed view of your selected-->
-            <!--country. This holds-->
-            <!--several key attributes of a country and finally an essay discussing proper conduct as an American traveling-->
-            <!--abroad.-->
-            <!--The second option is to select a region and click the quiz button. This will randomly ask a question based-->
-            <!--on the countries in the region-->
-            <!--you selected. This is intended to be a fun way to test you knowledge on foreign countries and ensures you-->
-            <!--have the base amount of knowledge-->
-            <!--to actively and respectfully interact in a foreign country and culture. Just remember it is our duty as a-->
-            <!--traveler to be informed of the Country's laws and cultural normals to not be abrasive or disrespectful;-->
-            <!--not knowing or being unaware isn't a reasonable excuse... anymore.</p>-->
-
-    </div>
-    <div class="country-cards container">
-        {% for country in countries %}
-        <a href="{% url 'gardyloo:details' country.id %}" class="parent">
-        <div class="card small  z-depth-1 country__card">
-            <div class="card-image waves-effect waves-block waves-light container">
-                <img src="{{country.image.url}}">
+<div id="app">
+    <header>
+        <nav>
+            <div class="nav-wrapper container">
+                <ul>
+                    <li>
+                        <div class="search-wrapper card input-field">
+                            <input placeholder="Search" class="center-align no-mar valign-wrapper" type="text" v-model="filter_search"
+                                   @keydown.enter="search()" @input="search()">
+                        </div>
+                    </li>
+                    <li class="valign-wrapper">
+                        <a href="{% url 'gardyloo:quiz' %}" class="btn waves-effect waves-light btn grey "><i
+                                class="material-icons left">contacts</i>Quiz</a>
+                    </li>
+                    <li class="valign-wrapper">
+                        <a href="{% url 'gardyloo:login' %}" class="btn waves-effect waves-light btn grey"><i
+                                class="material-icons left">grade</i>User Login</a>
+                    </li>
+                    <li class="valign-wrapper">
+                        <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i
+                                class="material-icons left">home</i>Home</a>
+                    </li>
+                </ul>
             </div>
-            <!--@click-->
-                <span class="kluge flow-text center-align card-title grey-text text-darken-4 bottom">{{country.name}}</span>
+        </nav>
+    </header>
+    <div class="container">
+        <div id="about">
+            <h4 class="center">How this all works</h4>
         </div>
-
-        {% endfor %}
-        </a>
+        <div class="country-cards container">
+            <a v-bind:href="'/gardyloo/details/' + country.id" class="parent" v-for="country in countries">
+                <div class="card small  z-depth-1 country__card">
+                    <div class="card-image waves-effect waves-block waves-light container">
+                        <img v-bind:src="country.image"/>
+                    </div>
+                    <span class="kluge flow-text center-align card-title grey-text text-darken-4 bottom"><< country.name >></span>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
 <script>
     new Vue({
-        delimiters: ["<<",">>"],
-        el: '#search',
+        delimiters: ["<<", ">>"],
+        el: '#app',
         data: {
-            countries: []
+            image: [],
+            countries: [],
+            page: 1,
+            filter_search: '',
         },
 
         methods: {
-            search: function() {
+            search: function () {
                 let app = this
-                axios.get("{% url 'gardyloo:search' %}")
-                    .then(function (response) {
-                        app.countries = response.data.countries
-                    })
-                },
+                axios.get("{% url 'gardyloo:search' %}", {
+                    params: {
+                        'page': this.page,
+                        'search': this.filter_search
+                    }
+                }).then(function (response) {
+                    console.log(response.data)
+                    app.countries = response.data.countries
+                })
             },
-        })
+        },
+        created: function () {
+            this.search()
+        }
+    })
 </script>
+
 </body>
 </html>
 
