--- a/Django/mysite/gardyloo/templates/gardyloo/Home.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Home.html
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script src="https://d3js.org/d3-polygon.v1.min.js"></script>
+    <script src='https://d3js.org/d3.v4.min.js'></script></head>
+    <script src="https://unpkg.com/topojson@3"></script>
+
     <title>Home</title>
     <style>
         * {
@@ -112,12 +116,15 @@
                                 class="material-icons left">contacts</i>Quiz</a>
                     </li>
                     <li class="valign-wrapper">
+                        <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i
+                                class="material-icons left">home</i>Home</a>
+                    </li>
+                    <li class="valign-wrapper">
                         <a href="{% url 'gardyloo:login' %}" class="btn waves-effect waves-light btn grey"><i
                                 class="material-icons left">grade</i>User Login</a>
                     </li>
                     <li class="valign-wrapper">
-                        <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i
-                                class="material-icons left">home</i>Home</a>
+                        <a href="{% url 'gardyloo:logout' %}" class="btn waves-effect waves-light btn grey"><i class="material-icons left">directions_run</i>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -168,6 +175,17 @@
             this.search()
         }
     })
+
+    //globe
+    function loadData(cb) {
+  d3.json('https://unpkg.com/world-atlas@1/world/110m.json', function(error, world) {
+    if (error) throw error
+    d3.tsv('https://gist.githubusercontent.com/mbostock/4090846/raw/07e73f3c2d21558489604a0bc434b3a5cf41a867/world-country-names.tsv', function(error, countries) {
+      if (error) throw error
+      cb(world, countries)
+    })
+  })
+}
 </script>
 
 </body>
