--- a/Django/mysite/gardyloo/templates/gardyloo/details.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/details.html
@@ -21,16 +21,20 @@
     <nav>
         <div class="nav-wrapper">
             <ul>
-                <li>
-                    <a class="btn waves-effect waves-light btn grey"><i
-                            class="material-icons left">language</i>Search</a>
+                <li class="valign-wrapper">
+                    <a href="{% url 'gardyloo:quiz' %}" class="btn waves-effect waves-light btn grey "><i
+                                class="material-icons left">contacts</i>Quiz</a>
                 </li>
-                <li>
-                    <a href="{% url 'gardyloo:quiz' %}" class="btn waves-effect waves-light btn grey"><i
-                            class="material-icons left">contacts</i>Quiz</a>
+                <li class="valign-wrapper">
+                    <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i
+                                class="material-icons left">home</i>Home</a>
                 </li>
-                <li>
-                    <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i class="material-icons left">home</i>Home</a>
+                <li class="valign-wrapper">
+                    <a href="{% url 'gardyloo:login' %}" class="btn waves-effect waves-light btn grey"><i
+                                class="material-icons left">grade</i>User Login</a>
+                </li>
+                <li class="valign-wrapper">
+                    <a href="{% url 'gardyloo:logout' %}" class="btn waves-effect waves-light btn grey"><i class="material-icons left">directions_run</i>Logout</a>
                 </li>
             </ul>
         </div>
