--- a/Django/mysite/gardyloo/templates/gardyloo/Index.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://d3js.org/d3-polygon.v1.min.js"></script>
-    <script src='https://d3js.org/d3.v4.min.js'></script></head>
-    <script src="https://unpkg.com/topojson@3"></script>
+    <script src='https://d3js.org/d3.v4.min.js'></script>
+    <script src="https://unpkg.com/topojson@3"></script></head>
+
 <style>
     html, body {
   margin: 0;
