--- a/Django/mysite/gardyloo/templates/gardyloo/quiz.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/quiz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -48,10 +49,6 @@
                                 class="material-icons left">home</i>Home</a>
                 </li>
                 <li class="valign-wrapper">
-                    <a href="{% url 'gardyloo:login' %}" class="btn waves-effect waves-light btn grey"><i
-                                class="material-icons left">grade</i>User Login</a>
-                </li>
-                <li class="valign-wrapper">
                     <a href="{% url 'gardyloo:logout' %}" class="btn waves-effect waves-light btn grey"><i class="material-icons left">directions_run</i>Logout</a>
                 </li>
             </ul>
@@ -63,6 +60,7 @@
     <h5 class="center-align">Questions << counter >> : Correct << correct >></h5>
     <h5 class="center-align"><< question >></h5>
     <div>
+        <transition name="answers">
         <div class="row center-align lined_up" v-for="(option, index) in answers" >
             <div class="col s12 m6">
               <div class="card deep-purple lighten-4">
@@ -72,6 +70,7 @@
               </div>
             </div>
           </div>
+         </transition>
     </div>
 </div>
 
@@ -87,6 +86,7 @@
             question: "",
             answers: [],
             correct_answer_index: [],
+            show: false,
         },
         methods: {
             start_quiz: function() {
@@ -104,10 +104,11 @@
                 this.counter += 1
                 if (this.correct_answer_index == index) {
                     this.correct += 1
-                    confirm('You were correct')
+                    confirm('Correct')
                 } else {
-                    confirm('You were incorrect')
+                    confirm('Incorrect')
                 }
+                //set time out
                 this.start_quiz()
             },
             next_question: function() {
