--- a/Django/mysite/gardyloo/templates/gardyloo/Home.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Home.html
@@ -47,6 +47,9 @@
             bottom: 0;
             left: 0;
             right: 0;
+            padding:1px;
+            border:1px solid black;
+            background-color:grey;
         }
 
         .country-cards {
