--- a/Django/mysite/gardyloo/templates/gardyloo/quiz.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/quiz.html
@@ -46,7 +46,7 @@
             <ul>
                 <li class="valign-wrapper">
                     <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i
-                                class="material-icons left">home</i>Home</a>
+                                class="material-icons left">home</i>Gardyloo</a>
                 </li>
                 <li class="valign-wrapper">
                     <a href="{% url 'gardyloo:logout' %}" class="btn waves-effect waves-light btn grey"><i class="material-icons left">directions_run</i>Logout</a>
