--- a/Django/mysite/gardyloo/templates/gardyloo/Home.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Home.html
@@ -50,6 +50,7 @@
             padding:1px;
             border:1px solid black;
             background-color:grey;
+            border-radius: 16px;
         }
 
         .country-cards {
@@ -165,7 +166,6 @@
                         'search': this.filter_search
                     }
                 }).then(function (response) {
-                    console.log(response.data)
                     app.countries = response.data.countries
                 })
             },
