--- a/ChalkBoard(practice)/Node/node-web-server/views/maintenance.hbs
+++ b/ChalkBoard(practice)/Node/node-web-server/views/maintenance.hbs
@@ -5,11 +5,9 @@
     <title>Help</title>
 </head>
 <body>
-    {{> header}}
-    <p>Some text here</p>
-    <p>{{screamIt welcomeMessage}}</p>
-
-    {{> footer}}
-
+    <h1>
+        We Will Be Right Back
+    </h1>
+    <p>The sight is currently being updated</p>
 </body>
 </html>
