--- a/ChalkBoard(practice)/Node/node-web-server/views/partials/footer.hbs
+++ b/ChalkBoard(practice)/Node/node-web-server/views/partials/footer.hbs
@@ -1,3 +1,3 @@
     <footer>
-        <p>Created by Nathan - Copyright {{currentYear}}</p>
+        <p>Created by Nathan - Copyright {{getCurrentYear}}</p>
     </footer>
