--- a/ChalkBoard(practice)/Node/node-web-server/views/partials/header.hbs
+++ b/ChalkBoard(practice)/Node/node-web-server/views/partials/header.hbs
@@ -1,3 +1,14 @@
-<h1>
+<header>
+    <h1>
        {{pageTitle}}
-</h1>
+    </h1>
+    <p><a
+    href="/">
+        Home
+    </a></p>
+
+    <p><a
+    href="/about">
+        about
+    </a></p>
+</header>
